# pyocci

./: .gitignore  .travis.yml  README.md  requirements.txt  setup.cfg
pyocci/: __init__.py  client.py  exceptions.py  occi.py  shell.py  utils.py
pyocci/v1_1/: capabilities.py  client.py  instances.py  shell.py
